# soundbridge

./: .editorconfig  .gitignore  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.omo/: ralph-loop.local.md
.omo/plans/: context.md  rust-core-implementation.md
.omo/run-continuation/: ses_187702d9affed9JsLSzPak4yLq.json  ses_187702db2ffeyAYqyUzOqwDwsJ.json  ses_189636655ffeQ0mqxTyjIpV4Xg.json  ses_1896dc673ffeXJwt1yDwOFwtyo.json  ses_1897a6009ffenhxv0cu3c3zVbq.json  ses_1897eb398ffe0VZNh39U7gpqxh.json  ses_18b93f242ffev43zGvS13HtqwD.json
.trae/specs/soundbridge-mvp/: checklist.md  spec.md  tasks.md
android/: AGENTS.md  RUST_FFI_MIGRATION.md  gradle.properties  gradlew  keystore.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_processor.cpp  jni_bridge.cpp  opus_codec.cpp  udp_socket.cpp
android/app/src/main/cpp/include/: audio_engine.h  audio_processor.h  opus_codec.h  udp_socket.h
android/app/src/main/java/com/soundbridge/: MainActivity.kt  SoundBridgeApp.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-en/: strings.xml
docs/: CHANGELOG.md  android-status.md  api-reference.md  design.md  development-plan-v2.md  development-plan.md  technical-spec.md  troubleshooting.md  user-manual.md
docs/superpowers/plans/: 2026-05-31-phase8-release-polish.md
docs/superpowers/specs/: 2026-05-29-rust-core-restructure-design.md
rust-core/: .gitignore  AGENTS.md  Cargo.toml
rust-core/crates/audio-capture/: AI_GUIDE.md  Cargo.toml
rust-core/crates/audio-capture/src/: config.rs  device.rs  lib.rs
rust-core/crates/audio-capture/tests/: capture_integration_test.rs  capture_test.rs
rust-core/crates/audio-codec/: AI_GUIDE.md  Cargo.toml
rust-core/crates/audio-codec/benches/: opus_benchmark.rs
rust-core/crates/audio-codec/src/: fec.rs  lib.rs
rust-core/crates/audio-codec/tests/: codec_test.rs
rust-core/crates/audio-core/: AI_GUIDE.md  Cargo.toml
rust-core/crates/audio-core/benches/: pipeline_benchmark.rs
rust-core/crates/audio-core/src/: audio_mode.rs  audio_profile.rs  auto_profile.rs  auto_start.rs  full_pipeline.rs  hotkeys.rs  level_indicator.rs  lib.rs  notifications.rs  pipeline.rs  pipeline_impl.rs  ring_buffer.rs
rust-core/crates/audio-core/tests/: audio_profile_test.rs  auto_profile_test.rs  core_integration_test.rs  integration_test.rs  pipeline_e2e_test.rs  pipeline_test.rs  stability_test.rs
rust-core/crates/audio-mixer/: AI_GUIDE.md  Cargo.toml
rust-core/crates/audio-mixer/src/: lib.rs  stereo.rs
rust-core/crates/audio-mixer/tests/: mixer_integration_test.rs  mixer_test.rs  stereo_test.rs
rust-core/crates/audio-playback/: AI_GUIDE.md  Cargo.toml
rust-core/crates/audio-playback/src/: config.rs  device.rs  lib.rs
rust-core/crates/audio-playback/tests/: playback_integration_test.rs  playback_test.rs
rust-core/crates/audio-processor/: AI_GUIDE.md  Cargo.toml
rust-core/crates/audio-processor/src/: aec.rs  agc.rs  eq.rs  gain.rs  lib.rs  noise_gate.rs  ns.rs  plc.rs  silence_detector.rs
rust-core/crates/audio-processor/tests/: eq_test.rs  processor_integration_test.rs  processor_test.rs
rust-core/crates/discovery/: AI_GUIDE.md  Cargo.toml
rust-core/crates/discovery/src/: device_store.rs  lib.rs
rust-core/crates/discovery/tests/: discovery_integration_test.rs  discovery_test.rs
rust-core/crates/ffi-bindings/: AI_GUIDE.md  Cargo.toml
rust-core/crates/ffi-bindings/include/: soundbridge.h
rust-core/crates/ffi-bindings/src/: lib.rs
rust-core/crates/ffi-bindings/tests/: ffi_integration_test.rs  ffi_test.rs  pipeline_integration_test.rs
rust-core/crates/network/: AI_GUIDE.md  Cargo.toml
rust-core/crates/network/benches/: network_benchmarks.rs
rust-core/crates/network/src/: bandwidth_pid.rs  connection.rs  crypto.rs  jitter_buffer.rs  lib.rs  net_monitor.rs  quic_control.rs  reconnect.rs  session.rs  transport.rs
rust-core/crates/network/tests/: bandwidth_pid_test.rs  e2e_encryption_test.rs  network_integration_test.rs  network_test.rs
rust-core/crates/protocol/: AI_GUIDE.md  Cargo.toml
rust-core/crates/protocol/src/: lib.rs
rust-core/crates/protocol/tests/: protocol_integration_test.rs  protocol_test.rs
rust-core/spikes/cpal-latency/: Cargo.toml
rust-core/spikes/cpal-latency/src/: main.rs
rust-core/spikes/webrtc-apm/: Cargo.toml
rust-core/spikes/webrtc-apm/src/: lib.rs  main.rs
rust-core/tests/: pipeline_test.rs
scripts/: bench.ps1  build-windows.ps1  local-ci.ps1  package-android.ps1  package-windows.ps1  package.ps1  release.ps1  test.ps1  verify-release.ps1
tools/: benchmark-runner.ps1  test-harness.ps1
windows/: AGENTS.md  CMakeLists.txt
windows/cmake/: FindOpus.cmake  FindWebRTC.cmake
windows/include/soundbridge/: audio_engine.h  export.h  types.h
windows/src/: CMakeLists.txt
windows/src/audio/: CMakeLists.txt  opus_codec.cpp  opus_codec.h  wasapi_capture.cpp  wasapi_capture.h  wasapi_renderer.cpp  wasapi_renderer.h  webrtc_apm.cpp  webrtc_apm.h
windows/src/core/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  audio_pipeline.cpp  audio_pipeline.h  audio_types.cpp  audio_types.h  log.h  session.cpp  session.h
windows/src/network/: CMakeLists.txt  dtls_session.cpp  dtls_session.h  packet.h  quic_transport.cpp  quic_transport.h  srtp_context.cpp  srtp_context.h  transport_interface.h  udp_transport.cpp  udp_transport.h
windows/src/ui/: AdbManager.cs  App.xaml  App.xaml.cs  AutoStartManager.cs  ConnectionNotificationService.cs  Converters.cs  HotkeyManager.cs  HotspotManager.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  NativeMethods.cs  Package.appxmanifest  SoundBridge.csproj  TrayIcon.cs  app.manifest
windows/tests/: CMakeLists.txt  test_audio_pipeline.cpp  test_opus_codec.cpp  test_udp_transport.cpp
(+19 files in other folders)
