[package]
name = "audio-mixer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
audio-core = { path = "../audio-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
