[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
audio-core = { path = "../audio-core" }
protocol = { path = "../protocol" }
tokio.workspace = true
quinn.workspace = true
quinn-proto.workspace = true
rustls.workspace = true
rcgen.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
aes.workspace = true
ctr.workspace = true
hmac.workspace = true
sha1.workspace = true
cipher.workspace = true
hkdf.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "network_benchmarks"
harness = false
